--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ textarea{
             <input type="text" name="a">
             </form></center>
               <center><h1>CONTACT US</h1></center>
-              <center><b><form>
+              <center><b><form name="contact" netlify>
                 <div class="container">
                 <p align="left"><label for="fname">First Name</label></p>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
